--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,9 @@
 /backend/bin/Debug/net8.0/backend.exe
 /backend/bin/Debug/net8.0/backend.pdb
 /backend/obj/Debug/net8.0/refint/backend.dll
+/backend/.vs/backend/FileContentIndex/4b46eb5f-9631-4d68-9ccc-ae20a602ae8c.vsidx
+/backend/.vs/backend/FileContentIndex/8cf48ef0-c974-4c18-900d-5cd7afe2140f.vsidx
+/backend/.vs/backend/FileContentIndex/c1dad8df-09ad-4686-b299-e32495dff62b.vsidx
+/backend/.vs/backend/FileContentIndex/c9cda381-141b-45bf-9644-33d50033726f.vsidx
+/backend/.vs/backend/FileContentIndex/e374b28b-60da-4c8b-85b0-218b9ffba596.vsidx
+/backend/obj/Debug/net8.0/backend.csproj.BuildWithSkipAnalyzers
