--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@
 /backend/.vs/backend/FileContentIndex/c9cda381-141b-45bf-9644-33d50033726f.vsidx
 /backend/.vs/backend/FileContentIndex/e374b28b-60da-4c8b-85b0-218b9ffba596.vsidx
 /backend/obj/Debug/net8.0/backend.csproj.BuildWithSkipAnalyzers
+/backend/.cr/personal/Navigation/Code Places.xml
