--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@monaco-editor/react": "^4.7.0",
+    "@tailwindcss/typography": "^0.5.16",
     "d3": "^7.9.0",
     "dexie": "^4.0.11",
     "dexie-react-hooks": "^1.1.7",
@@ -19,7 +20,9 @@
     "minisearch": "^7.1.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.7.1",
+    "remark-gfm": "^4.0.1",
     "zustand": "^5.0.7"
   },
   "devDependencies": {
@@ -27,6 +30,7 @@
     "@types/lodash-es": "^4.17.12",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/tailwindcss__typography": "^0.5.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
