--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,10 @@
     "react-dom": "^19.1.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.7.1",
+    "react-syntax-highlighter": "^15.6.1",
     "remark-gfm": "^4.0.1",
+    "unist-util-visit": "^5.0.0",
+    "uuid": "^11.1.0",
     "zustand": "^5.0.7"
   },
   "devDependencies": {
@@ -30,6 +33,7 @@
     "@types/lodash-es": "^4.17.12",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@types/tailwindcss__typography": "^0.5.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.19",
