--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^7.7.1",
     "react-syntax-highlighter": "^15.6.1",
     "reactflow": "^11.11.4",
+    "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
     "unist-util-visit": "^5.0.0",
     "uuid": "^11.1.0",
