--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,12 @@
 /backend/dev2ndbrain.db-wal
 /backend/appsettings.json
 /backend/Dockerfile
+*.nuget
+*.cache
+*.csproj.*
+*staticwebassets.*
+*backend.*
+*.NETCoreApp.*
 
 #frontend
 frontend/Dockerfile
@@ -22,8 +28,3 @@ frontend/.env
 /.vs
 .env
 docker-compose.yaml
-/backend/obj/backend.csproj.nuget.dgspec.json
-/backend/obj/backend.csproj.nuget.g.props
-/backend/obj/backend.csproj.nuget.g.targets
-/backend/obj/project.assets.json
-/backend/obj/project.nuget.cache
