--- a/electron/package.json
+++ b/electron/package.json
@@ -1,18 +1,23 @@
 {
-  "name": "dev2ndbrain-desktop",
-  "version": "1.0.0",
+  "name": "dev2ndbrain",
+  "version": "1.1.7",
   "description": "Desktop wrapper for Dev2ndBrain",
   "main": "build/main.cjs",
   "scripts": {
     "build:frontend": "cd ../frontend && npm install && npm run build:electron",
     "build:electron": "tsc",
+    "publish:backend": "dotnet publish ../backend -c Release -r win-x64 --output ./build/backend",
     "start": "npm run build:frontend && tsc && electron .",
-    "package": "npm run build:frontend && tsc && electron-builder"
+    "package": "npm run build:frontend && npm run build:electron && npm run publish:backend && electron-builder"
   },
-  "author": "Your Name",
+  "author": {
+    "name": "Erwin Wilson Ceniza",
+    "email": "erwinwilsonceniza@gmail.com"
+  },
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^17.2.1"
+    "dotenv": "^17.2.1",
+    "electron-log": "^5.1.5"
   },
   "devDependencies": {
     "@types/node": "^20.14.2",
@@ -26,18 +31,28 @@
     "productName": "Dev2ndBrain",
     "files": [
       "build/**/*",
-      "node_modules/**/*"
+      "help.html"
+    ],
+    "extraResources": [
+      {
+        "from": "build/backend",
+        "to": "backend"
+      },
+      {
+        "from": "../frontend/dist",
+        "to": "frontend"
+      }
     ],
     "directories": {
       "output": "dist"
     },
     "win": {
       "target": "nsis",
-      "icon": "assets/icon.ico"
+      "icon": "assets/dev2ndbrain.ico"
     },
     "mac": {
       "target": "dmg",
-      "icon": "assets/icon.icns"
+      "icon": "assets/dev2ndbrain.icns"
     },
     "linux": {
       "target": "AppImage"
