--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@types/react-resizable": "^3.0.8",
     "clsx": "^2.1.1",
     "dexie": "^4.0.11",
+    "dexie-export-import": "^4.1.4",
     "dexie-react-hooks": "^1.1.7",
     "dompurify": "^3.2.6",
     "lodash-es": "^4.17.21",
